refactored Weapon, updated tests